| Bug #4904 | Stored procedure crash if continue handler for HY000 errors | ||
|---|---|---|---|
| Submitted: | 5 Aug 2004 2:45 | Modified: | 6 Aug 2004 17:35 |
| Reporter: | Peter Gulutzan | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.2-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Bugs System | Target Version: | |
[5 Aug 2004 2:45]
Peter Gulutzan
[6 Aug 2004 5:02]
Miguel Solorzano
Verified against latest BK 5.0 tree.
[6 Aug 2004 17:35]
Per-Erik Martin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
