Fixed BUG#4904: Stored procedure crash if continue handler for HY000 errors.   The description is not entirerly correct. The issue was follow-up errors   where the first error is not caught - in which case it's often a system   error with errcode < 1000 (which are mapped by default to 'HY000'). In this   case the error state is different from what was assumed in the execution   loop.

mysql-test/r/sp.result:
  New test case for BUG#4902.
mysql-test/t/sp.test:
  New test case for BUG#4902.
sql/sp_head.cc:
  Don't test the net.report_error flag in the execution loop. (Don't know
  why this was done in the first place, as it seems to serve no purpose.)